# cmake-templates

./: .gitignore  CMakeLists.txt  README.md
inc/: functions.hpp
lib/: CMakeLists.txt
src/: CMakeLists.txt  hello.cpp  main.cpp
src/lib/: CMakeLists.txt
test/: CMakeLists.txt  testmain.cpp
